# open-dynamic-workflow

./: .gitignore  Cargo.toml  README.md  RENDER_OPT_SPEC.md  SPEC.md
.github/workflows/: ci.yml  release.yml
docs/: REPORT.md
examples/: deep-research.workflow.js  hello.workflow.js  mock.workflow.js  student-mgmt.workflow.js
skill/codex-flow-workflow/: SKILL.md
skill/codex-flow-workflow/references/: dsl-reference.md  patterns.md
src/: cli.rs  codex.rs  engine.rs  event.rs  journal.rs  lib.rs  main.rs  registry.rs  render_opt.rs  tui.rs  worktree.rs
src/js/: prelude.js
