[package]
name = "codex-flow"
version = "0.1.0"
edition = "2024"
description = "Orchestrate many parallel codex CLI sub-agents from one JavaScript workflow (embedded deno_core + ratatui TUI)"
repository = "https://github.com/kanda-mashiro/open-dynamic-workflow"

[dependencies]
anyhow = "1.0.102"
crossterm = { version = "0.28", features = ["event-stream"] }
deno_core = "0.403"
deno_error = "0.7"
futures = "0.3.32"
ratatui = { version = "0.29.0", features = ["all-widgets", "crossterm", "underline-color", "unstable-widget-ref"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full"] }
unicode-width = "0.2"
uuid = { version = "1.23.2", features = ["v4"] }
